# g

./: Cargo.toml  README.md
examples/: calculator.rs  handoff.rs  vision.rs
g-macros/: Cargo.toml
g-macros/src/: lib.rs
src/: agent.rs  error.rs  event.rs  lib.rs  message.rs  model.rs  policy.rs  runtime.rs  tool.rs
src/providers/: openai.rs
tests/: runtime.rs  tool_macro.rs
