[package]
name = "g"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
g-macros = { path = "g-macros" }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
members = ["g-macros"]
